2011-05-31  Richard Frith-Macdonald <rfm@gnu.org>

	* Headers/GNUstepBase/GNUstep.h:
	Deprecate autorelease pool macros and make them always create the
	pool.

2011-05-31  Richard Frith-Macdonald <rfm@gnu.org>

	* Headers/Foundation/NSHashTable.h:
	* Headers/Foundation/NSMapTable.h:
	* Source/Additions/GSMime.m:
	* Source/Additions/GSXML.m:
	* Source/GSAvahiNetService.m:
	* Source/NSCallBacks.m:
	* Source/NSConcreteHashTable.m:
	* Source/NSConcreteMapTable.m:
	* Source/NSConnection.m:
	* Source/NSMessagePort.m:
	* Source/NSSocketPort.m:
	* Source/NSTask.m:
	* Source/NSTimeZone.m:
	* Source/unix/GSRunLoopCtxt.m:
	* Source/win32/GSRunLoopCtxt.m:
	Update to use new NSInteger... callback names rather than NSInt...
	for compatibility with OSX
	* Source/NSNotificationCenter.m: revert/rewrite recent GC changes to
	simplify code and preprocessor conditionals and to avoid overheads
	of using a class as an observation except for GC with cland/libobc2.
	Is it really needed even then?  I guess it would be if we weren't
	using the Boehm GC library, and were stuck with a GC system which
	didn't support zeroing weak pointers in unscanned memory.

2011-05-29  Richard Frith-Macdonald <rfm@gnu.org>

	* configure.ac: Fix broken atomic ops again.
	* configure: regenerate

2011-05-30 11:40  David Chisnall <theraven@gna.org>

	* Source/NSData.m:
	Add a couple of __strong annotations to pointers. Any non-id pointer
	that can store GC'd memory must be __strong. Currently, this annotation
	is largely ignored, because the runtime is a lot more lax about what
	may store pointers than Apple's, but this will be tightened up in the
	future.

2011-05-28  Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSNotificationCenter.m,
	* Source/NSUserDefaults.m: Remove compiler warnings.

2011-05-28 18:05  David Chisnall <theraven@gna.org>

	* Source/NSPointerArray.m:
	Make NSPointerArray insert the correct read / write barriers in GC mode.
	* Source/NSConcretePointerFunctions.h: